Fixed header display on mobile browser
.lg-header from 3rem to 2.5rem

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,10 @@ p {
   #title .container-fluid {
     text-align: center;
   }
+  
+  .lg-header {
+    font-size: 2.5rem;
+  }
 
   .title-image {
     position: static;
